--- a/css/snake-css.css
+++ b/css/snake-css.css
@@ -1,3 +1,10 @@
 body{
-    background-color: gray;
+    background-color: rgb(0, 0, 0);
+    color: rgb(12, 202, 12);
+    height: 95vh;
+    width: 95;
+    display: flex;
+    justify-content: center; /* Alinha Horizontalmente */
+    align-items: center;/* Alinha Verticalmente */
+    flex-direction: column;
 }
